@@ -405,6 +405,13 @@ where
 <EM>ns</EM> is a namespace abbreviation. This causes the search to be 
 executed in the given namespace only.
 
+<P>The hierarchy is collapsed and the first 100 matches of the search 
+are added to the hierarchy. Using <font size=-1>shift-</font>click, 
+collapsing of the hierarchy is skipped and the hits are added to the 
+current view. This makes it easy to add resources to the hierarchy, 
+preparing drop operations. Similar results can be realised by creating a 
+new window using <A HREF="#menu:File/Newwindow">File/New window</A>.
+
 <H3><A NAME="sec:2.5">2.5 Icons and Labels</A></H3>
 
 <A NAME="sec:label"></A>
@@ -839,7 +846,7 @@ the
 <DT><A HREF="#menu:File/Newfile">File/New file</A><DD>
 <DT><A HREF="#menu:File/Newproject">File/New project</A><DD>
 <DT><A HREF="#menu:File/Newwindow">File/New window</A><DD>
-<A HREF="#sec:2.1">2.1</A>
+<A HREF="#sec:2.1">2.1</A> <A HREF="#sec:2.4">2.4</A>
 <DT><A HREF="#menu:File/Openproject">File/Open project</A><DD>
 <DT><A HREF="#menu:File/Saveall">File/Save all</A><DD>
 <DT><A HREF="#menu:File/Savefile">File/Save file</A><DD>
