@@ -96,7 +96,7 @@ user:file_search_path(snapshot, user_profile(Dir)) :-
 		 *	      VERSION		*
 		 *******************************/
 
-t20_version('0.73, Sep 2005').
+t20_version('0.74, Oct 2005').
 required_prolog_version(50531).
 
 check_prolog_version :-
